--- a/Inspection/Info.plist
+++ b/Inspection/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>The app needs to access camera to click the pictures of rolls</string>
 </dict>
 </plist>
